--- a/requirements.txt
+++ b/requirements.txt
@@ -26,6 +26,7 @@ python-dotenv==1.0.1
 python-multipart==0.0.9
 PyYAML==6.0.1
 rich==13.7.1
+setuptools==70.3.0
 shellingham==1.5.4
 sniffio==1.3.1
 starlette==0.37.2
