--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,10 @@
 annotated-types==0.7.0
 anyio==4.4.0
 certifi==2024.7.4
+charset-normalizer==3.3.2
 click==8.1.7
 dnspython==2.6.1
+docutils==0.21.2
 email_validator==2.2.0
 fastapi==0.111.1
 fastapi-cli==0.0.4
@@ -11,12 +13,20 @@ httpcore==1.0.5
 httptools==0.6.1
 httpx==0.27.0
 idna==3.7
+importlib_metadata==8.0.0
 iniconfig==2.0.0
+jaraco.classes==3.4.0
+jaraco.context==5.3.0
+jaraco.functools==4.0.1
 Jinja2==3.1.4
+keyring==25.2.1
 markdown-it-py==3.0.0
 MarkupSafe==2.1.5
 mdurl==0.1.2
+more-itertools==10.3.0
+nh3==0.2.18
 packaging==24.1
+pkginfo==1.10.0
 pluggy==1.5.0
 pydantic==2.8.2
 pydantic_core==2.20.1
@@ -25,14 +35,22 @@ pytest==8.2.2
 python-dotenv==1.0.1
 python-multipart==0.0.9
 PyYAML==6.0.1
+readme_renderer==44.0
+requests==2.32.3
+requests-toolbelt==1.0.0
+rfc3986==2.0.0
 rich==13.7.1
 setuptools==70.3.0
 shellingham==1.5.4
 sniffio==1.3.1
 starlette==0.37.2
+twine==5.1.1
 typer==0.12.3
 typing_extensions==4.12.2
+urllib3==2.2.2
 uvicorn==0.30.1
 uvloop==0.19.0
 watchfiles==0.22.0
 websockets==12.0
+wheel==0.43.0
+zipp==3.19.2
