--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -3,10 +3,10 @@ name: CI
 on:
   push:
     branches:
-      - master
+      - chore/enhance-fomatting
   pull_request:
     branches:
-      - master
+      - chore/enhance-fomatting
 
 jobs:
   test:
@@ -40,3 +40,8 @@ jobs:
         run: |
           pip install flake8
           flake8 .
+
+      - name: Format code with black
+        run: |
+          pip install black
+          black --check .
