--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -47,4 +47,4 @@ jobs:
       - name: Format code with black
         run: |
           pip install black
-          black --check .
+          black .
