--- a/requirements.txt
+++ b/requirements.txt
@@ -1,56 +1,58 @@
 annotated-types==0.7.0
-anyio==4.6.0
-certifi==2024.8.30
+anyio==4.9.0
+certifi==2025.1.31
 charset-normalizer==3.4.1
-click==8.1.7
+click==8.1.8
 dnspython==2.7.0
 docutils==0.21.2
 email_validator==2.2.0
 fastapi==0.115.11
-fastapi-cli==0.0.5
+fastapi-cli==0.0.7
 h11==0.14.0
 httpcore==1.0.7
-httptools==0.6.1
-httpx==0.27.2
-idna==3.8
-importlib_metadata==8.5.0
+httptools==0.6.4
+httpx==0.28.1
+id==1.5.0
+idna==3.10
+importlib_metadata==8.6.1
 iniconfig==2.0.0
 jaraco.classes==3.4.0
 jaraco.context==6.0.1
 jaraco.functools==4.1.0
-Jinja2==3.1.4
-keyring==25.5.0
+Jinja2==3.1.6
+keyring==25.6.0
 markdown-it-py==3.0.0
 MarkupSafe==3.0.2
 mdurl==0.1.2
-more-itertools==10.5.0
-nh3==0.2.18
+more-itertools==10.6.0
+nh3==0.2.21
 packaging==24.2
-pkginfo==1.10.0
+pkginfo==1.12.1.2
 pluggy==1.5.0
-pydantic==2.9.2
-pydantic_core==2.23.4
-Pygments==2.18.0
-pytest==8.3.3
+pydantic==2.10.6
+pydantic_core==2.27.2
+Pygments==2.19.1
+pytest==8.3.5
 python-dotenv==1.0.1
-python-multipart==0.0.12
+python-multipart==0.0.20
 PyYAML==6.0.2
 readme_renderer==44.0
 requests==2.32.3
 requests-toolbelt==1.0.0
 rfc3986==2.0.0
 rich==13.9.4
-setuptools==74.1.2
+rich-toolkit==0.13.2
+setuptools==76.0.0
 shellingham==1.5.4
 sniffio==1.3.1
-starlette==0.41.3
-twine==5.1.1
+starlette==0.46.1
+twine==6.1.0
 typer==0.15.2
 typing_extensions==4.12.2
-urllib3==2.2.3
+urllib3==2.3.0
 uvicorn==0.34.0
 uvloop==0.21.0
 watchfiles==1.0.4
-websockets==13.1
+websockets==15.0.1
 wheel==0.45.1
-zipp==3.20.1
+zipp==3.21.0
